--- a/retopdf11/style.css
+++ b/retopdf11/style.css
@@ -1,6 +1,8 @@
 @font-face {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
+  
+src: url("https://fonts.google.com/specimen/Open+Sans");
+} 
+
 @import url("https://fonts.google.com/specimen/Open+Sans");
 * {
 font-family:sans-serif ;
