--- a/retopdf11/style.css
+++ b/retopdf11/style.css
@@ -1,2 +1,11 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Belanosima&display=swap');
 
+* {
+    font-family: 'Belanosima', sans-serif;
+}
+
+
+h1 , h2 {
+  font-family: "belanosima";
+}
