--- a/retopdf8/style.css
+++ b/retopdf8/style.css
@@ -1,12 +1,25 @@
-a {
+a nav li{
     background-color: rgb(82, 78, 78);
 }
 a:hover {background-color: rgb(180, 173, 173);}
+a:hover {
+    color: red;
+   }
+section a:focus {
+
+    border:4px solid darkmagenta;
+    color: darkmagenta;
+}
+section a::before {
+    content:"x";
+    padding-left: 5px;
+    color: black;
+}
 
 a {
     border-color: darkmagenta;}
     * {
-        box-sizing: border-box;
+        box-sizing: border-box; 
         margin: 0;
         padding: 0;
         }
@@ -64,7 +77,7 @@ list-style-type: none;
 }
 /* SUSITUIR EL PUNTO DE LA LISTA POR LA X */
 section a {
-color: #333;
+color:rgb(33,33, 33);
 text-decoration: none;
 font-weight: bold;
 font-size: 1.2em;
