--- a/retopdf8/style.css
+++ b/retopdf8/style.css
@@ -11,7 +11,7 @@ section a:focus {
     color: darkmagenta;
 }
 section a::before {
-    content:"x";
+    content:"🅧";
     padding-left: 5px;
     color: black;
 }
